@@ -140,7 +140,7 @@
 				Optimization="0"
 				OmitFramePointers="true"
 				AdditionalIncludeDirectories="..\..\libgame\include;..\..\..\"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;TU_CONFIG_LINK_TO_LIBPNG=0;USE_MYSQL;USE_FFMPEG"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;TU_CONFIG_LINK_TO_LIBPNG=0;USE_MYSQL;USE_FFMPEG;USE_STACKWALKER"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -241,6 +241,10 @@
 			</File>
 			<File
 				RelativePath="..\..\gameswf_morph2.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\gameswf_movie_def.cpp"
 				>
 			</File>
 			<File
@@ -366,6 +370,10 @@
 			</File>
 			<File
 				RelativePath="..\..\gameswf_movie.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\gameswf_movie_def.h"
 				>
 			</File>
 			<File
@@ -743,6 +751,18 @@
 			</File>
 			<File
 				RelativePath="..\..\gameswf_as_classes\as_textformat.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="leak"
+			>
+			<File
+				RelativePath="..\..\Stackwalker.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Stackwalker.h"
 				>
 			</File>
 		</Filter>
